--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 										
 										We use your Personal Information for providing and improving the Service. By using the Service, you agree to the collection and use of information in accordance with this policy. Unless otherwise defined in this Privacy Policy, terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, accessible on app-stores.</p>
 									<h3>Information Collection And Use</h3>
-									<p>While using our Service, for ow we don't ask for any personal information.</p>
+									<p>While using our Service, for now we don't ask for any personal information.</p>
 									
 									<h3>Log Data</h3>
 									<p>We collect information that your browser sends whenever you visit our Service (“Log Data”). This Log Data may include information such as your computer’s Internet Protocol (“IP”) address, browser type, browser version, the pages of our Service that you visit, the time and date of your visit, the time spent on those pages and other statistics.</p>
